--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,16 +1,16 @@
 name: tests
-
-on: [push]
-
+on:
+  pull_request:
+  push:
+    branches:
+      - main
 jobs:
   test:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        julia-version: ['1']
         julia-arch: [x64]
         os: [ubuntu-latest]
-
     steps:
       - uses: actions/checkout@v2
       - uses: julia-actions/setup-julia@v1
